Added new ES and DE strings.

--- a/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-20 18:05+0200\n"
-"PO-Revision-Date: 2013-03-19 21:18+0200\n"
+"PO-Revision-Date: 2013-03-20 19:52+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: \n"
 "Language: es\n"
@@ -7798,38 +7798,43 @@ msgstr "Por favor haz clic aquí para previsualizar tu email de confirmación."
 #: ../code/application/views/helpfile/pofields.php:749
 #, php-format
 msgid "This type of dorm can accommodate up to 1 guest per dorm."
-msgstr ""
+msgstr "Este tipo de dormitorio puede albergar hasta 1 huésped por dormitorio."
 
 #: ../code/application/views/helpfile/pofields.php:750
 #, php-format
 msgid "This type of dorm can accommodate up to 7 guests per dorm."
 msgstr ""
+"Este tipo de dormitorio puede albergar hasta 7 huéspedes por dormitorio."
 
 #: ../code/application/views/helpfile/pofields.php:751
 #, php-format
 msgid "This type of bedroom can accommodate up to 1 guest per room."
-msgstr ""
+msgstr "Este tipo de habitación puede albergar hasta 1 huésped por habitación."
 
 #: ../code/application/views/helpfile/pofields.php:752
 #, php-format
 msgid "This type of bedroom can accommodate up to 7 guests per room."
 msgstr ""
+"Este tipo de habitación puede albergar hasta 7 huéspedes por habitación."
 
 #: ../code/application/views/helpfile/pofields.php:753
 #, php-format
 msgid "The lowest price per person per night in a dorm in this property:"
 msgstr ""
+"El precio más bajo por persona y noche en un dormitorio en este alojamiento:"
 
 #: ../code/application/views/helpfile/pofields.php:754
 #, php-format
 msgid ""
 "The lowest price per person per night in a private room at this property:"
 msgstr ""
+"El precio más bajo por persona y noche en una habitación privada de este "
+"alojamiento:"
 
 #: ../code/application/views/helpfile/pofields.php:755
 #, php-format
 msgid "Maximum you can book"
-msgstr ""
+msgstr "Máximo que puedes reservar"
 
 #: ../code/application/views/home_view.php:15
 msgid "30,000 Auberges et logements pas chers"
