--- a/languages/ci/locale/ru_RU/LC_MESSAGES/auberge_lang_yh.po
+++ b/languages/ci/locale/ru_RU/LC_MESSAGES/auberge_lang_yh.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-20 18:05+0200\n"
-"PO-Revision-Date: 2013-03-16 22:36+0200\n"
+"PO-Revision-Date: 2013-03-23 23:06+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -4887,7 +4886,7 @@ msgstr "Общежития %s"
 #: ../code/application/views/mustache/property_list.php:207
 #, php-format
 msgid "Private rooms from %s"
-msgstr "Частных комнаты %s"
+msgstr "Частные комнаты %s"
 
 #: ../code/application/views/helpfile/pofields.php:15
 msgid "Nb Rooms"
